--- a/products-service/serverless.yml
+++ b/products-service/serverless.yml
@@ -7,12 +7,21 @@ service: products-service
 
 provider:
   name: aws
-    runtime: python3.9
-    region: us-east-1
-    environment:
-      DYNAMO_TABLE: Products
-      AWS_REGION: ${env:AWS_REGION}
-      
+  runtime: python3.9
+  region: us-east-1
+  environment:
+    DYNAMO_TABLE: Products-Dev
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+        - dynamodb:Scan
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: 
+        - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/Products-Dev
+
 functions:
   createProduct:
     handler: handler.create_product
@@ -54,7 +63,7 @@ resources:
     ProductsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: Products
+        TableName: Products-Dev
         AttributeDefinitions:
           - AttributeName: ProductID
             AttributeType: S
